# sofre

./: .gitmodules  CMakeLists.txt  README.md
include/sofre/: sofre.hpp
src/: core.hpp  glad.c  sofre.cpp
src/glad/: glad.h
